# time-series-forecasting

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: lstm.yaml  tcn.yaml
notebooks/: arma.ipynb  forecasting.ipynb  lstm.ipynb  tcn.ipynb
scripts/: main.py
ts_utils/: __init__.py  layers.py  lstm.py  models.py  training.py
ts_utils/data/: __init__.py  datamodules.py  datasets.py  generation.py  utils.py
ts_utils/models/: __init__.py  base_forecaster.py  utils.py
ts_utils/models/lstm/: __init__.py  lstm.py  models.py
ts_utils/models/tcn/: __init__.py  layers.py  models.py  tcn.py
ts_utils/tcn/: __init__.py  base.py  layers.py  models.py  tcn.py
tsutils/: __init__.py  data.py  layers.py  models.py  training.py
tsutils/data/: __init__.py  datasets.py  generation.py
