[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ts_utils"]

[project]
name = "ts-utils"
version = "0.0.1"
description = "Time series forecasting"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Joseph Nagel", email = "JosephBNagel@gmail.com"}
]
keywords = ["time series", "forecasting", "ARMA", "LSTM", "TCN"]
dependencies = [
    "numpy",
    "pandas",
    "torch",
    "scikit-learn",
    "statsmodels"
]

[project.optional-dependencies]
interactive = [
    "matplotlib",
    "notebook"
]

[project.urls]
source = "https://github.com/joseph-nagel/time-series-forecasting"
